--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # Default ignored files
 /shelf/
 /workspace.xml
+/.idea
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
+#Build Files
+/build
+/dist
+Main.spec
