--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Default ignored files
 /shelf/
 /workspace.xml
-/.idea
+.idea/**
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
 #Build Files
-/build
-/dist
-Main.spec
+build/**
+#Env for pycharm
+venv/**
