--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+altgraph==0.17.4
 certifi==2024.2.2
 charset-normalizer==3.3.2
 idna==3.6
+packaging==24.0
+pefile==2023.2.7
+pyinstaller==6.5.0
+pyinstaller-hooks-contrib==2024.3
+pywin32-ctypes==0.2.2
 requests==2.31.0
+setuptools==69.2.0
 tkTimePicker @ git+https://github.com/Abaddon16/tkTimePicker.git@fabce5f0cd24bb399d1f101d3db7296a22bd787a
 urllib3==2.2.1
